--- a/paginas/ensino.html
+++ b/paginas/ensino.html
@@ -1,1 +1,20 @@
-Bem vindo a Ensino
+<div class="container text-center"> ensino - ifms</div>
+<div class="row">
+<div class="col-9" text-justify recuo>
+    
+    <p id="Lorem">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum voluptate perferendis architecto atque ullam explicabo voluptas vitae, laborum aspernatur nesciunt quasi minima omnis. Neque officia optio enim perspiciatis rem nobis dolorem magni id deleniti recusandae nulla ratione adipisci modi, ea exercitationem atque minus. Illo, laudantium nulla magnam nihil sint voluptate.</p>
+    <p id="Officiis">Officiis explicabo natus suscipit quis, quia fuga quisquam repudiandae, fugiat officia nostrum adipisci voluptas voluptatibus sapiente beatae exercitationem aspernatur veritatis. Unde eum modi iure fuga cumque cupiditate molestiae adipisci consequuntur, rerum cum ullam, nobis harum atque suscipit, magnam nisi quo id soluta asperiores eaque vitae sed laborum. Illum, aliquam impedit.</p>
+    <p id="Doloremque">Doloremque debitis qui, cum commodi voluptate quasi enim magni incidunt eligendi corporis quae laborum architecto? Molestias cumque tempore ea iure dignissimos atque. Laborum accusantium adipisci recusandae aliquid sit. Est soluta maiores non exercitationem labore illo officia ea explicabo voluptatem. Iusto rerum doloribus ex, earum perspiciatis quas? Eveniet id ex voluptatibus?</p>
+    <p id="Arduo">Arduo debitis qui, cum commodi voluptate quasi enim magni incidunt eligendi corporis quae laborum architecto? Molestias cumque tempore ea iure dignissimos atque. Laborum accusantium adipisci recusandae aliquid sit. Est soluta maiores non exercitationem labore illo officia ea explicabo voluptatem. Iusto rerum doloribus ex, earum perspiciatis quas? Eveniet id ex voluptatibus?</p>
+    <p id="Dominique">Dominique explicabo natus suscipit quis, quia fuga quisquam repudiandae, fugiat officia nostrum adipisci voluptas voluptatibus sapiente beatae exercitationem aspernatur veritatis. Unde eum modi iure fuga cumque cupiditate molestiae adipisci consequuntur, rerum cum ullam, nobis harum atque suscipit, magnam nisi quo id soluta asperiores eaque vitae sed laborum. Illum, aliquam impedit.</p>
+   
+    <div class="col-2 text-end">
+        <p><a href="#Lorem">Lorem</a></p>
+        <p><a href="#Officiis">Officiis</a></p>
+        <p><a href="#Dolorequem">Doloremque</a></p>
+        <p><a href="#Arduo">Arduo</a></p>
+        <p><a href="#Dominique">Arduo</a></p>
+       
+      </div>
+    </div>
+</div>
