--- a/paginas/pesquisa/exatas.html
+++ b/paginas/pesquisa/exatas.html
@@ -1,16 +1,48 @@
-
-<div class="container text-center"> Pesquisa em Exatas</div>
-<div class="col-9" text-justify recuo>
-    
-    <p id="Lorem">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum voluptate perferendis architecto atque ullam explicabo voluptas vitae, laborum aspernatur nesciunt quasi minima omnis. Neque officia optio enim perspiciatis rem nobis dolorem magni id deleniti recusandae nulla ratione adipisci modi, ea exercitationem atque minus. Illo, laudantium nulla magnam nihil sint voluptate.</p>
-    <p id="Officiis">Officiis explicabo natus suscipit quis, quia fuga quisquam repudiandae, fugiat officia nostrum adipisci voluptas voluptatibus sapiente beatae exercitationem aspernatur veritatis. Unde eum modi iure fuga cumque cupiditate molestiae adipisci consequuntur, rerum cum ullam, nobis harum atque suscipit, magnam nisi quo id soluta asperiores eaque vitae sed laborum. Illum, aliquam impedit.</p>
-    <p id="Doloremque">Doloremque debitis qui, cum commodi voluptate quasi enim magni incidunt eligendi corporis quae laborum architecto? Molestias cumque tempore ea iure dignissimos atque. Laborum accusantium adipisci recusandae aliquid sit. Est soluta maiores non exercitationem labore illo officia ea explicabo voluptatem. Iusto rerum doloribus ex, earum perspiciatis quas? Eveniet id ex voluptatibus?</p>
-    <p id="Arduo">Arduo debitis qui, cum commodi voluptate quasi enim magni incidunt eligendi corporis quae laborum architecto? Molestias cumque tempore ea iure dignissimos atque. Laborum accusantium adipisci recusandae aliquid sit. Est soluta maiores non exercitationem labore illo officia ea explicabo voluptatem. Iusto rerum doloribus ex, earum perspiciatis quas? Eveniet id ex voluptatibus?</p>
-
-    <div class="col-3 text-end">
-        <p><a href="#Lorem">Lorem</a></p>
-        <p><a href="#Officiis">Officiis</a></p>
-        <p><a href="#Dolorequem">Doloremque</a></p>
-        <p><a href="#Arduo">Arduo</a></p>
-      </div>
+<div
+  class="container fw-bold text-center rounded-2 bg-success bg-gradient text-white my-2 py-2"
+>
+  Pesquisa Exatas - IFMS
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-10 text-justify recuo">
+      <p id="lorem">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique
+        eveniet est molestias deleniti deserunt distinctio nihil maxime
+        voluptatem cumque natus quidem saepe neque maiores ratione, nisi libero
+        laborum perferendis at corporis, sed possimus. Ab ut reiciendis debitis
+        architecto harum minima enim laborum recusandae voluptates dignissimos
+        accusamus accusantium, dolorum tempora officia, id necessitatibus totam.
+        Molestias sit, voluptas harum, similique suscipit unde laborum
+        distinctio est itaque, quibusdam eius consequuntur! Repellat, vel ipsam!
+      </p>
+      <p id="explicabo">
+        Explicabo facilis magni labore eaque odio praesentium. Delectus
+        accusantium iusto beatae perferendis, a, blanditiis aperiam rem fugit
+        quis temporibus est cumque quaerat vitae optio assumenda dolorem
+        provident suscipit. Ab porro adipisci corporis saepe perspiciatis
+        distinctio praesentium tenetur dicta esse laboriosam, tempora dolorum
+        minima totam? Quasi dolores voluptates pariatur perspiciatis molestiae
+        quod cumque rerum nesciunt laudantium eaque! Qui, sapiente explicabo ut
+        expedita omnis, voluptates nemo a impedit, distinctio quidem cumque
+        ipsam?
+      </p>
+      <p id="possimus">
+        Possimus ipsam consectetur quaerat eos! Voluptatibus, pariatur a illum
+        quo sit excepturi reiciendis, assumenda facere ipsum soluta iusto magni.
+        Hic, aperiam. Vel possimus vitae accusantium repudiandae facilis omnis!
+        Dolores, doloremque. Dicta, beatae eius officiis reiciendis expedita
+        harum ea nam asperiores pariatur eaque cupiditate minus repellat
+        voluptatum quam ratione accusantium, consectetur qui, labore
+        reprehenderit ipsum porro. Pariatur recusandae in, illo, quidem
+        architecto dicta blanditiis eveniet incidunt earum molestiae at
+        reiciendis consequuntur.
+      </p>
+    </div>
+    <div class="col-2 text-end">
+      <p><a href="#lorem">Lorem</a></p>
+      <p><a href="#explicabo">Explicabo</a></p>
+      <p><a href="#possimus">Possimus</a></p>
+    </div>
+  </div>
 </div>
