--- a/paginas/pesquisa/saude.html
+++ b/paginas/pesquisa/saude.html
@@ -1,16 +1,23 @@
-
-<div class="container text-center"> Pesquisa em Saúde</div>
-<div class="col-9" text-justify recuo>
-    
-    <p id="Lorem">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum voluptate perferendis architecto atque ullam explicabo voluptas vitae, laborum aspernatur nesciunt quasi minima omnis. Neque officia optio enim perspiciatis rem nobis dolorem magni id deleniti recusandae nulla ratione adipisci modi, ea exercitationem atque minus. Illo, laudantium nulla magnam nihil sint voluptate.</p>
-    <p id="Officiis">Officiis explicabo natus suscipit quis, quia fuga quisquam repudiandae, fugiat officia nostrum adipisci voluptas voluptatibus sapiente beatae exercitationem aspernatur veritatis. Unde eum modi iure fuga cumque cupiditate molestiae adipisci consequuntur, rerum cum ullam, nobis harum atque suscipit, magnam nisi quo id soluta asperiores eaque vitae sed laborum. Illum, aliquam impedit.</p>
-    <p id="Doloremque">Doloremque debitis qui, cum commodi voluptate quasi enim magni incidunt eligendi corporis quae laborum architecto? Molestias cumque tempore ea iure dignissimos atque. Laborum accusantium adipisci recusandae aliquid sit. Est soluta maiores non exercitationem labore illo officia ea explicabo voluptatem. Iusto rerum doloribus ex, earum perspiciatis quas? Eveniet id ex voluptatibus?</p>
-    <p id="Arduo">Arduo debitis qui, cum commodi voluptate quasi enim magni incidunt eligendi corporis quae laborum architecto? Molestias cumque tempore ea iure dignissimos atque. Laborum accusantium adipisci recusandae aliquid sit. Est soluta maiores non exercitationem labore illo officia ea explicabo voluptatem. Iusto rerum doloribus ex, earum perspiciatis quas? Eveniet id ex voluptatibus?</p>
-
-    <div class="col-3 text-end">
-        <p><a href="#Lorem">Lorem</a></p>
-        <p><a href="#Officiis">Officiis</a></p>
-        <p><a href="#Dolorequem">Doloremque</a></p>
-        <p><a href="#Arduo">Arduo</a></p>
-      </div>
+<div
+  class="container fw-bold text-center rounded-2 bg-success bg-gradient text-white my-2 py-2"
+>
+  Pesquisa Saúde - IFMS
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-10 text-justify recuo">
+      <p id="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, mollitia maxime, officiis tenetur eum suscipit at veniam dolorem ipsam, obcaecati cupiditate! Nemo porro iste facere sit quia dignissimos est deleniti unde, eum magni optio ex suscipit nobis modi repellendus praesentium!</p>
+      <p id="maxime">Maxime quo assumenda corporis hic saepe qui enim fugit, tenetur est in eaque aspernatur numquam, itaque perspiciatis dicta quisquam vel similique mollitia. Officiis animi voluptatibus nulla sit qui id consectetur? Error eum nobis voluptatem vero dolorum recusandae voluptatum quaerat optio.</p>
+      <p id="et">Et error quas praesentium dignissimos assumenda amet repudiandae voluptate necessitatibus rerum dolorum hic laudantium ab in consequatur, porro nisi ea eum tempora suscipit harum a officiis? Amet, sint temporibus! Sunt debitis, voluptate quisquam modi cumque reprehenderit saepe exercitationem libero omnis?</p>
+      <p id="consectetur">Consectetur incidunt ipsam minima, nam aliquid molestias deleniti vitae. Dolorum architecto quis aut, tenetur cum quibusdam asperiores vel nostrum aspernatur modi laborum nobis beatae! Officiis ratione voluptates, vero fugit mollitia pariatur rerum nemo at incidunt, perferendis similique eligendi reiciendis vel!</p>
+      <p id="quia">Quia tempora quos dolores eveniet voluptatem quasi nam eius, laborum provident odit voluptatum assumenda facere eos impedit voluptates animi soluta ipsa enim quo officia a possimus reprehenderit! Quia necessitatibus, nulla sequi est a qui? A molestiae laboriosam veritatis mollitia sed.</p>
+    </div>
+    <div class="col-2 text-end">
+      <p><a href="#lorem">Lorem</a></p>
+      <p><a href="#maxime">Maxime</a></p>
+      <p><a href="#et">Et</a></p>
+      <p><a href="#consectetur">Consectetur</a></p>
+      <p><a href="#quia">Quia</a></p>
+    </div>
+  </div>
 </div>
