--- a/paginas/ensino.html
+++ b/paginas/ensino.html
@@ -1,20 +1,59 @@
-<div class="container text-center"> ensino - ifms</div>
-<div class="row">
-<div class="col-9" text-justify recuo>
-    
-    <p id="Lorem">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum voluptate perferendis architecto atque ullam explicabo voluptas vitae, laborum aspernatur nesciunt quasi minima omnis. Neque officia optio enim perspiciatis rem nobis dolorem magni id deleniti recusandae nulla ratione adipisci modi, ea exercitationem atque minus. Illo, laudantium nulla magnam nihil sint voluptate.</p>
-    <p id="Officiis">Officiis explicabo natus suscipit quis, quia fuga quisquam repudiandae, fugiat officia nostrum adipisci voluptas voluptatibus sapiente beatae exercitationem aspernatur veritatis. Unde eum modi iure fuga cumque cupiditate molestiae adipisci consequuntur, rerum cum ullam, nobis harum atque suscipit, magnam nisi quo id soluta asperiores eaque vitae sed laborum. Illum, aliquam impedit.</p>
-    <p id="Doloremque">Doloremque debitis qui, cum commodi voluptate quasi enim magni incidunt eligendi corporis quae laborum architecto? Molestias cumque tempore ea iure dignissimos atque. Laborum accusantium adipisci recusandae aliquid sit. Est soluta maiores non exercitationem labore illo officia ea explicabo voluptatem. Iusto rerum doloribus ex, earum perspiciatis quas? Eveniet id ex voluptatibus?</p>
-    <p id="Arduo">Arduo debitis qui, cum commodi voluptate quasi enim magni incidunt eligendi corporis quae laborum architecto? Molestias cumque tempore ea iure dignissimos atque. Laborum accusantium adipisci recusandae aliquid sit. Est soluta maiores non exercitationem labore illo officia ea explicabo voluptatem. Iusto rerum doloribus ex, earum perspiciatis quas? Eveniet id ex voluptatibus?</p>
-    <p id="Dominique">Dominique explicabo natus suscipit quis, quia fuga quisquam repudiandae, fugiat officia nostrum adipisci voluptas voluptatibus sapiente beatae exercitationem aspernatur veritatis. Unde eum modi iure fuga cumque cupiditate molestiae adipisci consequuntur, rerum cum ullam, nobis harum atque suscipit, magnam nisi quo id soluta asperiores eaque vitae sed laborum. Illum, aliquam impedit.</p>
-   
-    <div class="col-2 text-end">
-        <p><a href="#Lorem">Lorem</a></p>
-        <p><a href="#Officiis">Officiis</a></p>
-        <p><a href="#Dolorequem">Doloremque</a></p>
-        <p><a href="#Arduo">Arduo</a></p>
-        <p><a href="#Dominique">Arduo</a></p>
-       
-      </div>
+<div class="container fw-bold text-center rounded-2 bg-success bg-gradient text-white my-2 py-2">
+  Ensino - IFMS
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-10 text-justify recuo">
+      <p id="lorem">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero
+        molestias officia ea fugiat inventore blanditiis deleniti itaque
+        voluptas ad a maxime, impedit, quas cupiditate natus sint quam sit enim
+        cum. Neque vero possimus ex at, reprehenderit explicabo laudantium iusto
+        aspernatur molestiae aliquam praesentium earum sit ducimus, perspiciatis
+        doloribus perferendis dolorem. Dicta consectetur iusto repellat, velit
+        quae aliquam sed nostrum. Repellendus delectus tenetur enim cum
+        repudiandae magnam, nihil illo, eos mollitia nam excepturi architecto
+        rerum debitis dignissimos soluta nemo molestiae quo!
+      </p>
+      <p id="pariatur">
+        Pariatur similique reiciendis sapiente nostrum laudantium itaque nemo
+        fugit voluptates! Voluptates deleniti harum unde ex aliquam repellendus,
+        sunt possimus adipisci hic delectus recusandae sapiente consequuntur id
+        enim placeat repellat minus reprehenderit ducimus magnam nobis dolores
+        quam inventore! Officiis quasi, fugiat pariatur eius veritatis ratione
+        dicta quia vero necessitatibus odio debitis recusandae repudiandae
+        veniam voluptates itaque. Quo praesentium optio commodi debitis quam
+        repellat doloribus sunt, porro, totam illo, eligendi ullam iusto? Ipsa
+        dicta nam assumenda beatae sit. Fugiat exercitationem laborum non?
+      </p>
+      <p id="doloribus">
+        Doloribus officiis porro sed facere aliquid fugiat harum, reiciendis
+        iure quo molestias assumenda vitae id aliquam cum neque deserunt sint
+        corrupti accusantium tenetur earum! Accusamus labore rem, esse sequi
+        repellat rerum, voluptate delectus iusto odio consequatur aperiam. Nulla
+        provident enim voluptatem cupiditate. Harum ab maxime quisquam iste,
+        doloribus quam deleniti ipsum, fugit itaque blanditiis, nulla voluptate
+        eum? Quaerat corporis eum consectetur voluptates consequuntur tempore
+        enim incidunt! Ducimus fuga aliquam libero placeat adipisci, qui nulla,
+        tenetur id rerum ipsam temporibus nam.
+      </p>
+      <p id="omnis">
+        Omnis possimus harum maiores voluptate esse nesciunt est consequatur
+        quaerat architecto ipsam. Dolores hic modi deleniti veritatis eum minus
+        consectetur mollitia iusto officia temporibus. Distinctio incidunt
+        deserunt ipsam magnam ea in expedita sed doloribus dignissimos
+        laboriosam vero temporibus asperiores nisi accusamus libero mollitia,
+        quam neque omnis beatae non aspernatur corrupti assumenda? Nostrum quasi
+        at quia, qui laboriosam dignissimos vel in nam corrupti omnis dolores
+        neque ab praesentium consequuntur eaque, veniam molestias voluptatem
+        libero quae necessitatibus voluptates modi iusto nobis. Earum.
+      </p>
     </div>
+    <div class="col-2 text-end">
+      <p><a href="#lorem">Lorem</a></p>
+      <p><a href="#pariatur">Pariatur</a></p>
+      <p><a href="#doloribus">Doloribus</a></p>
+      <p><a href="#omnis">Omnis</a></p>
+    </div>
+  </div>
 </div>
